syntax = "proto3";
package vire.utility;

import "vire/utility/BasePayload.proto";

message BaseResponse {

  BasePayload _base = 1;

}
